client/src/stylesheets/shared/form.css
:root {
	--color-form-blue: #5fa8d3;
}

.form-add {
	position: relative;
	margin-bottom: 0.5rem;
	height: 50px;
	width: 100%;
	overflow: hidden;
}

.form-add input {
	outline: none;
	border: none;
	padding-top: 20px;
	background: transparent;
	height: 100%;
	width: 100%;
	color: var(--color-background-dark);
	font-size: 1rem;
}

.form-add label {
	position: absolute;
	bottom: 0;
	left: 0;
	border-bottom: 1px solid var(--color-background-dark);
	height: 100%;
	width: 100%;
	pointer-events: none;
}

.form-add label::after {
	content: "";
	position: absolute;
	bottom: -1px;
	left: 0;
	transform: translateX(-100%);
	border-bottom: 3px solid var(--color-form-blue);
	height: 100%;
	width: 100%;
	transition: all 0.3s ease;
}

.form-add span {
	position: absolute;
	bottom: 5px;
	left: 0;
	transition: all 0.3s ease;
	color: var(--color-background-dark);
}

.form-add input:focus + label span,
.form-add input:valid + label span {
	transform: translateY(-150%);
	font-size: 0.8rem;
	color: var(--color-form-blue);
}

.form-add input:focus + label::after,
.form-add input:valid + label::after {
	transform: translate(0);
}

